--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ On my free time I like to do many things, but there is one thing that is taking 
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Java <i class="val">70</i></span>
+              <span class="skill">Java <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -484,7 +484,7 @@ worked on server side scripting using PHP</li></ul>
         </div>
 
       </div>
-    </section> End Portfolio Section -->
+    </section> End Portfolio Section 
 
     
 
@@ -573,7 +573,7 @@ worked on server side scripting using PHP</li></ul>
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Lonely</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tushar</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
